@@ -30,6 +30,11 @@ suppliers and their address.
 
 Included a template for printing orders.
 
+The definition of register sessions as single/double is changed to be
+single/time where time is turnover time for the PM register. Setting
+as 12:00 is equivalent to previous double setting (but double is no
+longer valid).
+
 
 Version ClaSS-0.8.66 release (2009/03/12)
 -----------------------------------------
